Fixed some bugs in TorcEdgeList and TorcGraph.